--- a/render.yaml
+++ b/render.yaml
@@ -11,6 +11,13 @@ services:
           name: csc_dept
           property: connectionString
 
-databases:
-  - name: csc_dept
+services:
+  - type: web
+    name: GROUP17
+    env: node
     plan: free
+    buildCommand: "npm install"
+    startCommand: "npm start"
+    envVars:
+      - key: DATABASE_URL
+        value: "postgresql://csc_dept_user:cXR49dWsnFEzszsRaDOrthcVmNuLxKud@dpg-d3jr85ur433s739i5a2g-a.oregon-postgres.render.com/csc_dept"
