--- a/.env
+++ b/.env
@@ -1,6 +1,3 @@
 PORT=5000
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=
-DB_NAME=myappdb
+DATABASE_URL=postgresql://csc_dept_user:cXR49dWsnFEzszsRaDOrthcVmNuLxKud@dpg-d3jr85ur433s739i5a2g-a.oregon-postgres.render.com/csc_dept
 JWT_SECRET=mysecretkey
